[tool.poetry]
name = "teaminternational"
version = "0.1.0"
description = ""
authors = ["Alejandro Brunacci <abrunacci87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

